<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/animation_practical_title" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/alram_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="?attr/colorSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:contentDescription="@string/clock_des"
                android:background="@drawable/alarm_frame_animation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/alarm_title"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/alarm_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:text="@string/alarm_desc"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintEnd_toStartOf="@id/imageView3"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alarm_more_desc"
                app:layout_constraintStart_toStartOf="@id/alarm_desc"
                app:layout_constraintTop_toBottomOf="@id/alarm_desc" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/heart_animation_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/alarm_desc"
                app:layout_constraintBottom_toBottomOf="@id/textView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/createAlarm"
                android:textColor="?attr/colorOnSecondary"
                app:icon="@drawable/baseline_add_alarm_24"
                app:iconTint="?attr/colorOnSecondary"
                app:layout_constraintStart_toStartOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_alarm_btn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/cancel_alarm"
                app:icon="@drawable/baseline_alarm_off_24"
                app:layout_constraintBaseline_toBaselineOf="@id/create_alarm"
                app:layout_constraintStart_toEndOf="@id/create_alarm" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
